--- a/contrib/README
+++ b/contrib/README
@@ -8,22 +8,33 @@ binding.pl: perl script used to automate generation and update of GtkAda files.
 cairo-1.0.4.diff: a patch against cairo 1.0.4 sources needed to build under
 some platforms.
 
-glib-2.10.3.diff: a patch against Glib 2.10.3 sources needed to build Glib.
+cairo-1.2.4.diff: ditto for cairo 1.2.4
 
-glib-2.10.3-win32.diff: a patch against Glib 2.10.3 sources needed to build
-Glib under Windows.
+glib-2.10.3.diff: ditto for glib 2.10.3
 
-pango-1.12.3.diff: a patch against pango 1.12.3 sources needed to build under
-some platforms.
+glib-2.10.3-win32.diff: ditto for glib 2.10.3 under Windows.
 
-pango-1.12.3-win32.diff: a patch against pango 1.12.3 sources needed to build
-pango under Windows.
+glib-2.12.4.diff: ditto for glib 2.12.4
+
+glib-2.12.4-win32.diff: ditto for glib 2.12.4 under Windows.
+
+pango-1.12.3.diff: ditto for pango 1.12.3
+
+pango-1.12.3-win32.diff: ditto for pango 1.12.3 under Windows.
+
+pango-1.14.4.diff: ditto for pango 1.14.4
+
+pango-1.14.4-win32.diff: ditto for pango 1.14.4 under Windows.
 
 gtk+-2.8.20.diff: a patch against Gtk+ 2.8.20 sources containing some
-improvements/fixes not submitted yet.
+improvements/fixes not incorporated yet.
 
-gtk+-2.8.20-win32.diff: a patch against Gtk+ 2.8.20 sources needed to build
-Gtk+ under Windows.
+gtk+-2.8.20-win32.diff: ditto for Windows.
+
+gtk+-2.10.6.diff: a patch against Gtk+ 2.10.6 sources containing some
+improvements/fixes not incorporated yet.
+
+gtk+-2.10.6-win32.diff: ditto for Windows.
 
 gtkada-2.8-win32.diff: a patch to build GtkAda 2.8.x under Windows
 
