--- a/README
+++ b/README
@@ -22,12 +22,12 @@ The home page for gtk is
 
 This home page will always contain the latest news for this toolkit.
 
-This is GtkAda version 2.8.3. This package is an Ada95 graphical library
+This is GtkAda version 2.10.0. This package is an Ada graphical library
 for the Gimp Toolkit, which means this is a set of packages to allow you
 to easily create some graphical interfaces under X11 and Win32, using Ada
 as the programming language.
 
-This library has been tested using Gtk+ 2.8.20 on the following systems:
+This library has been tested using Gtk+ 2.10.9 on the following systems:
 
    - GNU Linux/x86
    - GNU Linux/x86-64
@@ -35,12 +35,8 @@ This library has been tested using Gtk+ 2.8.20 on the following systems:
    - Solaris/sparc
    - Solaris/x86
    - Windows XP
-   - AIX
-   - IRIX
    - HP-UX/pa
-   - HP-UX/ia64
    - Tru64
-   - Mac OS X
    - FreeBSD/x86
 
 If you manage to use it on other systems (which should probably be
