--- a/contrib/README
+++ b/contrib/README
@@ -14,9 +14,13 @@ glib-2.12.9.diff: ditto for glib 2.12.9
 
 glib-2.12.9-win32.diff: ditto for glib 2.12.9 under Windows.
 
+glib-2.12.11-win32.diff: ditto for glib 2.12.11 under Windows.
+
 pango-1.14.10.diff: ditto for pango 1.14.10
 
 pango-1.14.10-win32.diff: ditto for pango 1.14.10 under Windows.
+
+pango-1.16.1-win32.diff: ditto for pango 1.16.1 under Windows.
 
 pygtk-2.8.6.diff: patch to build pygtk 2.8.6 with --without-threads
 
@@ -26,6 +30,8 @@ improvements/fixes not incorporated yet.
 gtk+-2.10.9-win32.diff: ditto for Windows.
 
 gtk+-2.10.11.diff: ditto against Gtk+ 2.10.11 sources
+
+gtk+-2.10.11-win32.diff: ditto for Windows.
 
 gtkada-2.10-win32.diff: a patch to build GtkAda 2.10.x under Windows
 
