Put back cairo 1.2.6 diff, needed under AIX

--- a/contrib/README
+++ b/contrib/README
@@ -5,8 +5,10 @@ Contents
 
 binding.pl: perl script used to automate generation and update of GtkAda files.
 
-cairo-1.4.6.diff: a patch against cairo 1.4.6 sources needed to build under
+cairo-1.2.6.diff: a patch against cairo 1.2.6 sources needed to build under
 some platforms.
+
+cairo-1.4.6.diff: ditto for cairo 1.4.6
 
 glib-2.12.12-win32.diff: ditto for glib 2.12.12 under Windows.
 
