--- a/docs/gtkada_rm/gtkada_rm.texi
+++ b/docs/gtkada_rm/gtkada_rm.texi
@@ -5,7 +5,7 @@
 
 @dircategory User Interface Toolkit
 @direntry
-* GtkAda_Rm: (gtkada_rm).           Ada95 graphical tookit based on GTK+ (Reference Manual)
+* GtkAda_Rm: (gtkada_rm).           Ada graphical tookit based on GTK+ (Reference Manual)
 @end direntry 
 
 @c --------------------------------------------
@@ -24,7 +24,7 @@
 @vskip 0pt plus 1filll
 Copyright @copyright{} 1998-2000, Emmanuel Briot, Joel Brobecker, Arnaud Charlet
 
-Copyright @copyright{} 2000-2008, AdaCore
+Copyright @copyright{} 2000-2010, AdaCore
 @end titlepage
 
 
