--- a/README
+++ b/README
@@ -52,5 +52,5 @@ Temple Place - Suite 330, Boston, -- MA 02111-1307, USA.
 Documentation
 =============
 
-The GtkAda reference manul and user's guide can be found under the
+The GtkAda reference manual and user's guide can be found under the
 docs/ subdirectory in various formats (texinfo, ps, txt, info, html)
