--- a/README
+++ b/README
@@ -31,7 +31,6 @@ This library has been tested using Gtk+ 3.4.1 on the following systems:
 
    - GNU Linux/x86
    - GNU Linux/x86-64
-   - GNU Linux/ia64
    - Solaris/sparc
    - Windows XP/Vista/7
 
@@ -52,5 +51,8 @@ Temple Place - Suite 330, Boston, -- MA 02111-1307, USA.
 Documentation
 =============
 
-The GtkAda reference manual and user's guide can be found under the
-docs/ subdirectory in various formats (texinfo, ps, txt, info, html)
+The GtkAda User's Guide can be found:
+  - HTML version: in docs/gtkada_ug/_build/html/index.html
+  - PDF  version: in docs/gtkada_ug/_build/latex/GtkAda.pdf 
+The GtkAda Reference Manual can be found:
+  - HTML version: in gtkada_rm/gtkada_rm/index.html 
