--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-Installing and compiling your programs 
+Installing and compiling your programs
 ======================================
 
 If you have a previous version of GtkAda on your system, we recommend that
@@ -22,7 +22,7 @@ the root directory). You can use an older GCC version for the Ada files
 
    $ (cd src; patch -p0 < ../contrib/gtkada-2.10-win32.diff)
    $ CC='gcc-4.7 -mms-bitfields' ./configure --prefix=<install_dir> \
-       --build=i386-pc-mingw32
+       --build=i686-pc-mingw32
    $ make
    $ make install
 
@@ -44,23 +44,13 @@ testgtk example.
 
 Note that you might have to be root to install GtkAda on your system.
 
-You should also modify your PATH variable to include the installation
-directory, or copy the gtkada-config script somewhere in your path
-     
-   $ setenv PATH <installation_directory>:$PATH
-or
-   $ export PATH=<installation_directory>:$PATH
-     
 Finally, update your LD_LIBRARY_PATH variable to include the <prefix>/lib
 directory, so that the linker can find the libraries.  The other
 alternative under GNU/Linux if you have root priviledges is to add this
 'prefix/lib' directory added in /etc/ld.conf and then run ldconfig.
 
-Then, when you want to compile your application, simply use the
-gtkada-config script:
-     
-   $ gnatmake <your_application> <your_switches> `gtkada-config`
+Then, to compile your application, simply add on top of your project file:
 
-This will automatically submit the correct paths to gnatmake so that
-the gtk and gtkada libraries are found.
+   with "gtkada";
 
+And compile with GPRbuild.
